--- a/index.html
+++ b/index.html
@@ -807,7 +807,7 @@
     </div>
 
     <video id="intro-video" muted style="width: 100%; height: 100%; object-fit: cover; position: fixed; top: 0; left: 0; z-index: 999;" disablePictureInPicture controlsList="nodownload noplaybackrate">
-    <source src="ecole_optimisee.mp4" type="video/mp4">
+    <source src="ecole.mp4" type="video/mp4">
     Votre navigateur ne supporte pas la lecture de vidéos.
 </video>
 <button id="play-button" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 1000;">Play</button>
