--- a/index.html
+++ b/index.html
@@ -304,8 +304,8 @@
                 <h3><i class="fas fa-briefcase"></i> Expérience</h3>
                 <ul>
                     <li>
-                        <strong>Stagiaire IT - Forvia (2024)</strong>
-                        <p>Développement app suivi inventaire (VBA), config matériel (switchs, PCs...), gestion outil inventaire.</p>
+                        <strong>Stagiaire en Intelligence Artificielle (2025)</strong>
+                        <p> Développement d'un modèle de reconnaissance d'humains avec une caméra IMX500 pour un système autonome sur drone (Machine Learning & Deep Learning)</p>
                     </li>
                     <!-- Autres expériences -->
                 </ul>
@@ -321,7 +321,7 @@
                     <li>Allemand (A1 - Débutant)</li>
                 </ul>
                 <div class="cv-download">
-                    <a href="https://drive.google.com/file/d/1YH2oquvzdwwkkxM-0YhJvBHcCCYRbPHs/view?usp=sharing" target="_blank" rel="noopener noreferrer">Télécharger CV <i class="fas fa-download"></i></a>
+                    <a href="https://drive.google.com/file/d/1iYN5GO-OhEW0ut0aBoPFM6CSA6omyRYw/view?usp=sharing" target="_blank" rel="noopener noreferrer">Télécharger CV <i class="fas fa-download"></i></a>
                 </div>
             </div>
         </section>
