--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
             contactDetails: [
                 { type: "Email", value: "altaycevik@gmail.com", link: "mailto:altaycevik@gmail.com", icon: "fas fa-envelope" },
                 { type: "Téléphone", value: "07 83 65 68 37", link: "tel:+33783656837", icon: "fas fa-phone" },
-                { type: "CV PDF", value: "Télécharger son CV", link: "https://cv-altay.vercel.app/CV_ALTAY_CEVIK_ALT.pdf", icon: "fas fa-file-pdf" } // Assurez-vous que ce lien est correct
+                { type: "CV PDF", value: "Télécharger son CV", link: "https://drive.google.com/file/d/1Y_dIy37f_oCekHd9rUVBItOIF8YXhtoi/view?usp=sharing", icon: "fas fa-file-pdf" } // Assurez-vous que ce lien est correct
             ],
             closing: "Merci de votre intérêt pour le profil d'Altay ! N'hésitez pas à le contacter directement via les informations ci-dessus."
         };
